# limbo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rumdl.toml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  GEMINI.md  LICENSE.txt  README.md  README.rst  Taskfile.yml  codecov.yml  mypy.ini  pyproject.toml  pytest-coverage.txt  pytest.ini  pytest.xml  ruff.toml
.cursor/: mcp.json
.cursor/rules/: ci-cd-implementation.mdc  clean-architecture.mdc  clean-code.mdc  code-style-consistency.mdc  configuration-management.mdc  error-handling-priorities.mdc  project-structure.mdc  pydantic-rules.mdc  python-general-style.mdc  python-testing.mdc
.github/: renovate.json
.github/workflows/: checks.yml  code_checks.yml  codespell.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  md_lint.yml  python_lint.yml  ruff_lint.yml  tests.yml  type_check.yml
docs/: .gitkeep  conf.py  index.rst  requirements.txt
src/limbo/: __init__.py
src/limbo_core/: __init__.py  context.py  errors.py  validation.py
src/limbo_core/adapters/: __init__.py  base_registry.py
src/limbo_core/adapters/connections/: __init__.py  errors.py  registry.py
src/limbo_core/adapters/filesystem/: __init__.py  errors.py  registry.py
src/limbo_core/adapters/generators/: __init__.py  errors.py  registry.py
src/limbo_core/adapters/persistence/: __init__.py  data_persistence_registry.py  errors.py  path_resolver_registry.py  persistor.py  read_registry.py  write_registry.py
src/limbo_core/adapters/plugins/: __init__.py  pluggy_plugin_loader.py
src/limbo_core/adapters/value_reader/: __init__.py  errors.py  registry.py
src/limbo_core/application/: __init__.py  context.py
src/limbo_core/application/context/: __init__.py  errors.py  resolution_context.py  runtime_context.py
src/limbo_core/application/interfaces/: __init__.py  backend_registration.py  base_registry.py  plugin_loader.py  reference_resolver.py
src/limbo_core/application/interfaces/connections/: __init__.py  connection_backend.py  connection_provider.py  connection_registry.py
src/limbo_core/application/interfaces/filesystem/: __init__.py  path_backend.py  path_registry.py  path_resolver.py
src/limbo_core/application/interfaces/generators/: __init__.py  generates.py  generator.py  registration.py  registry.py
src/limbo_core/application/interfaces/persistence/: __init__.py  data_persistence_backend.py  data_persistence_registry_port.py  data_persistence_resolver_port.py  path_resolver_backend.py  path_resolver_port.py  path_resolver_registry_port.py  persistor.py  read_backend.py  read_registry.py  read_resolver.py  write_backend.py  write_registry.py  write_resolver.py
src/limbo_core/application/interfaces/value_reader/: __init__.py  value_backend.py  value_registry.py  value_resolver.py
src/limbo_core/application/parsers/: __init__.py  artifacts_parser.py  backends_parser.py  common.py  connections_parser.py  path_spec_parser.py  project_parser.py  seeds_parser.py  sources_parser.py  tables_parser.py  value_spec_parser.py
src/limbo_core/application/services/: __init__.py  project_loader.py  project_validator.py
src/limbo_core/bootstrap/: __init__.py  container.py
src/limbo_core/connections/: __init__.py  base.py  errors.py  registry.py  sqlalchemy.py
src/limbo_core/domain/: __init__.py  errors.py  validation.py
src/limbo_core/domain/entities/: __init__.py  project.py
src/limbo_core/domain/entities/artifacts/: __init__.py  artifact.py  column.py  config.py  data_types.py
src/limbo_core/domain/entities/seeds/: __init__.py  (+5 more)
src/limbo_core/domain/value_objects/: __init__.py  resolved_storage_ref.py  tabular_batch.py
src/limbo_core/plugins/: __init__.py  builtin.py  hookspecs.py  manager.py  markers.py  plugin_manager.py
src/limbo_core/plugins/builtin/: __init__.py  plugin.py
src/limbo_core/yaml_schema/: interpolation.py  project.py
src/limbo_core/yaml_schema/artifacts/: __init__.py  artifact.py  column.py  config.py  data_types.py
src/limbo_core/yaml_schema/interpolation/: __init__.py  env.py  errors.py  value.py
src/limbo_core/yaml_schema/model/: __init__.py  column.py  option.py  option_factory.py  schema.py  table.py
src/limbo_core/yaml_schema/seeds/: __init__.py  column.py  config.py  errors.py  file.py  path_factory.py  seed.py
src/limbo_core/yaml_schema/sources/: column.py  config.py  errors.py  source.py
src/limbo_core/yaml_schema/tables/: __init__.py  column.py  config.py  errors.py  option.py  option_factory.py  reference.py  table.py
tests/: conftest.py
tests/adapters/: test_data_persistence_registry.py  test_default_persistor.py  test_env_and_seed_path_adapters.py  test_os_env_reader.py  test_persistence_write_registry.py
tests/application/: test_backends_parser.py  test_connections_parser.py  test_load_project_use_case.py  test_path_spec_parser.py  test_project_parser.py  test_seeds_parser.py
tests/bootstrap/: test_container.py
tests/connections/: test_errors.py  test_sqlalchemy.py
tests/context/: test_context_module.py
tests/domain/: test_connection_contract.py  test_context.py  test_core_errors_and_artifact.py  test_data_type_and_option_values.py  test_resolved_storage_ref.py  test_source_config.py  test_tabular_batch.py  test_validation_helpers.py  test_value_interpolator.py
tests/fixtures/: base.py  test_project.py
tests/fixtures/test_project/: project.yaml
tests/fixtures/test_project/seeds/: sex.csv  sex.yaml
tests/fixtures/test_project/sources/: company.yml
tests/fixtures/test_project/tables/: comments.yaml  posts.yaml  users.yaml
tests/generators/: test_generators_core.py
tests/plugins/: test_manager.py  test_registry.py  test_tabular_file_utils.py  test_tabular_file_write_backends.py
tests/test_project/models/: comments.yaml  posts.yaml  users.yaml
tests/yaml_models/: test_data_type.py  test_env_interpolation.py  test_option_factory.py  test_options_parsing.py  test_project_model.py  test_seed_file_and_path_factory.py  test_source_config.py  test_table_column.py
(+39 files in other folders)
